--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,53 @@
-
 .sect-intro-eh {
     display: flex;
-    /*background: green;*/
     flex-direction: row;
     width: 60%;
     margin: auto;
 }
 
 .sect-intro-eh img {
-    width: 500px;
+    display: block;
+    max-width: 500px;
+    max-height: 500px;
+    height: auto;
+    width: auto;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0 10px 10px -5px;
+}
+
+.sect-intro-eh h1 {
+    margin-bottom: 15px;
+}
+
+.sect-intro-eh div {
+    padding-right: 80px;
+}
+
+.sect-intro-eh p {
+    margin-bottom: 30px;
+}
+
+.sect-intro-eh .cta {
+    display: block;
+    width: 200px;
+    margin: auto;
+}
+
+.sect-last-project {
+    background-color: white;
+}
+
+.sect-last-project h2 {
+    margin-bottom: 30px;
+}
+
+.sect-last-project div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 300px;
+}
+
+.sect-last-project div img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
