--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,28 @@ a img:hover {
     opacity: 0.5;
 }
 
+footer,
 header {
+    /*background-color: var(--second-color);*/
+    background-color: white;
+}
+
+footer{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+footer img {
+    width: 50px;
+}
+
+footer div {
+    width: 125px;
+    display: flex;
+    justify-content: space-between;
 }
 
 nav {
@@ -64,4 +85,17 @@ nav a {
 
 section {
     padding: 80px;
+}
+
+h1 {
+    font-size: 3.5em;
+    color: var(--fifth-color);
+}
+
+.cta {
+  display: inline-block;
+  background: linear-gradient(var(--second-color), var(--third-color));
+  color: white;
+  border-radius: 50px;
+  padding: 20px 30px;
 }
