Added section for bg image pont de pierre

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,53 +1,70 @@
-.sect-intro-eh {
+.sect-image-bg {
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url("../images/paintings_to_cut/RETOUCHED/2004.JPG"), no-repeat scroll center center;
+    background-size: cover;
+    height: 90vh;
+    text-align: center;
     display: flex;
-    flex-direction: row;
-    width: 60%;
-    margin: auto;
+    align-items: center;
+    justify-content: center;
 }
 
-.sect-intro-eh img {
-    display: block;
-    max-width: 500px;
-    max-height: 500px;
-    height: auto;
-    width: auto;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0 10px 10px -5px;
+.sect-image-bg h1 {
+    color: var(--bdx-color);
 }
 
-.sect-intro-eh h1 {
-    margin-bottom: 15px;
-}
-
-.sect-intro-eh div {
-    padding-right: 80px;
-}
-
-.sect-intro-eh p {
-    margin-bottom: 30px;
+.sect-intro-eh {
+    width: 85vw;
+    margin: 15px auto;
 }
 
 .sect-intro-eh .cta {
-    display: block;
-    width: 200px;
-    margin: auto;
-}
-
-.sect-last-project {
-    background-color: white;
-}
-
-.sect-last-project h2 {
-    margin-bottom: 30px;
-}
-
-.sect-last-project div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 300px;
-}
-
-.sect-last-project div img {
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    text-align: center;
+    margin: 15px 0;
 }
+/*.sect-intro-eh img {*/
+/*    display: block;*/
+/*    max-width: 500px;*/
+/*    max-height: 500px;*/
+/*    height: auto;*/
+/*    width: auto;*/
+/*    box-shadow: rgba(0, 0, 0, 0.1) 0 20px 25px -5px, rgba(0, 0, 0, 0.04) 0 10px 10px -5px;*/
+/*}*/
+
+/*.sect-intro-eh h1 {*/
+/*    margin-bottom: 15px;*/
+/*}*/
+
+/*.sect-intro-eh div {*/
+/*    padding-right: 80px;*/
+/*}*/
+
+/*.sect-intro-eh p {*/
+/*    margin-bottom: 30px;*/
+/*}*/
+
+/*.sect-intro-eh .cta {*/
+/*    display: block;*/
+/*    width: 200px;*/
+/*    margin: auto;*/
+/*}*/
+
+/*.sect-last-project {*/
+/*    background-color: white;*/
+/*}*/
+
+/*.sect-last-project h2 {*/
+/*    margin-bottom: 30px;*/
+/*}*/
+
+/*.sect-last-project div {*/
+/*    display: grid;*/
+/*    grid-template-columns: 1fr 1fr 1fr 1fr;*/
+/*    grid-template-rows: 300px;*/
+/*}*/
+
+/*.sect-last-project div img {*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    object-fit: contain;*/
+/*}*/
