--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,21 @@
     --third-color: #d89a9e;
     --fourth-color: #c37d92;
     --fifth-color: #846267;
+    --bdx-color: #431B1F;
     --text-color: black;
 }
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Manrope', sans-serif;
     font-size: 1em;
     background-color: var(--primary-color);
+    min-height: 100vh;
 }
 
 a {
@@ -38,24 +41,7 @@ header {
     background-color: white;
 }
 
-footer{
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-}
-
-footer img {
-    width: 50px;
-}
-
-footer div {
-    width: 125px;
-    display: flex;
-    justify-content: space-between;
-}
-
+footer,
 nav {
     display: flex;
     flex-direction: row;
@@ -63,39 +49,46 @@ nav {
     justify-content: space-between;
 }
 
+footer a,
+nav a {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 1vh 2vw;
+}
+
 nav div {
     display: flex;
     align-items: center;
     justify-content: center;
+    /*flex: 1;*/
+}
+
+footer img,
+nav img {
+    width: 40px;
+}
+
+footer div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-contact-me {
     flex: 1;
 }
 
-nav img {
-    width: 50px;
-}
-
-nav a {
-    padding: 15px;
-}
-
-.link-basket {
-    display: flex;
-    justify-content: flex-end;
-}
-
-section {
-    padding: 80px;
-}
-
 h1 {
-    font-size: 3.5em;
+    font-size: 2em;
     color: var(--fifth-color);
+    font-family: 'DM Serif Display', 'sans-serif';
 }
 
 .cta {
-  display: inline-block;
-  background: linear-gradient(var(--second-color), var(--third-color));
-  color: white;
-  border-radius: 50px;
-  padding: 20px 30px;
+    display: inline-block;
+    background: var(--second-color);
+    font-weight: 700;
+    color: white;
+    border-radius: 50px;
+    padding: 20px 30px;
 }
