--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,7 @@ nav {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    min-height: 4vh;
 }
 
 footer a,
